--- a/Yazilimpark/Views/Home/Index.cshtml
+++ b/Yazilimpark/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                 foreach (var proje in Model)
                 {
                     <a asp-controller="Home" asp-action="@proje.Path">
-                        <div style="background-image:url(../assets/images/@proje.BackgroundImage)" class="card">
+                        <div style="background-image:url(../images/@proje.BackgroundImage)" class="card">
                             <div class="card-name">@proje.Name</div>
                         </div>
                     </a>
