--- a/Yazilimpark/Views/Home/Weather.cshtml
+++ b/Yazilimpark/Views/Home/Weather.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Yazilimpark.Models.SearchByCity
-
 @{
     ViewData["Title"] = "SearchByCity";
 }
@@ -9,7 +8,7 @@
             <h2> Search By City Name</h2>
             <div>
                 <input asp-for="CityName" class="form-control" placeholder="Enter cityname" />
-                <button asp-controller="WeatherForecast" asp-action="SearchByCity" class="btn btn-outline-primary"></button>
+                <button asp-controller="Home" asp-action="SearchByCity" class="btn btn-outline-primary"></button>
                 <span asp-validation-for="CityName" class="text-danger"></span>
             </div>
         </div>
