--- a/Yazilimpark/Views/Home/RandomQuote.cshtml
+++ b/Yazilimpark/Views/Home/RandomQuote.cshtml
@@ -15,15 +15,15 @@
             </div>
         </div>
         <div class="quote-buttons">
-            <button id="btn" onclick="RastgeleSoz()">RastgeleSozGetir</button>
-            <button id="btn" onclick="TwitterPaylas()">Twitter'da Paylaş</button>
+            <button onclick="RastgeleSoz()" class="quotes-button"><i class="fa fa-retweet"></i></button>
+            <button onclick="TwitterPaylas()" class="quotes-button"><i class="fa fa-twitter"></i></button>
 
         </div>
 
 
     </div>
     <script src="script.js"></script>
-
+    
 </body>
 
 @section Styles{
@@ -31,7 +31,7 @@
 }
 <script>
 
-    const getRandomQuote = async () => {
+    const TwitterPaylas = async () => {
         const res = await fetch('/api/quote');
         return await res.json();
     }
