--- a/Yazilimpark/wwwroot/css/random.css
+++ b/Yazilimpark/wwwroot/css/random.css
@@ -45,3 +45,51 @@ h2 {
     #btn:hover {
         box-shadow: 1px 1px 10px #341f97;
     }
+.quote-container {
+    display: block;
+    border-radius: 5px;
+    background-image: linear-gradient(120deg,#ff6b6b,#5f27cd);
+    width: 50%;
+    height: 360px;
+}
+.quote-header {
+    text-align: center;
+    font-size: 1.75rem;
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+    font-weight: bolder;
+}
+
+.quote-textarea-container {
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote-textarea {
+    width: 100%;
+    height: 210px;
+    background-color: white;
+    border: 1px solid black;
+    border-top-left-radius: 0.8rem;
+    border-bottom-right-radius: 0.8rem;
+    resize: none;
+    font-size: large;
+    padding: 0.5rem;
+}
+
+.quote-buttons {
+    padding: 0 1rem;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.quotes-button {
+    font-size: xx-large;
+    border-radius: 10px;
+}
+
+.quote-buttons button + button {
+    margin-left: 10px;
+}
