--- a/Yazilimpark/Views/Home/Weather.cshtml
+++ b/Yazilimpark/Views/Home/Weather.cshtml
@@ -1,5 +1,24 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿@model Yazilimpark.Models.City
+@{
+    ViewData["Title"] = "City";
+}
+
+<div class="container">
+    <div class="container">
+        <div class="form-group col-md-offset-3 col-md-5">
+            <label asp-for="Name"></label>
+            <span class="badge alert-primary">@Model.Name</span><br />
+            <label asp-for="Temperature"></label>
+            <span class="badge alert-primary">@Model.Temperature°</span><br />
+            <label asp-for="Humidity"></label>
+            <span class="badge alert-primary">@Model.Humidity</span><br />
+            <label asp-for="Weather"></label>
+            <span class="badge alert-primary">@Model.Weather</span><br />
+            
+        </div>
+
+    </div>
+</div>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,4 +52,3 @@
 
     </div>
     </body>
-</html>
