--- a/Yazilimpark/wwwroot/css/weather.css
+++ b/Yazilimpark/wwwroot/css/weather.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: "Montserrat"sas-erif;
+    font-family: "Montserrat",sans-serif;
     text-align: center;
     background-image: linear-gradient(120deg,#fff,#4795d4);
     max-width: 100vw;
@@ -20,35 +20,55 @@ body {
 
 .container {
     background-color: #efefef;
-    width: 400px;
-    height: 250px;
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 0.2fr 1.5fr 1.2fr 0.8fr;
+    grid-template-areas:
+        "city london berlin"
+        "city istanbul paris";
+    grid-gap: 0.2rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     color: #2e312f;
     display: flex;
     align-items: center;
     flex-direction: column;
     margin: auto;
-}
-#container {
-    display: grid;
-    grid: repeat(2, 60px) / auto-flow 80px;
 }
 
-    #container > div {
-        background-color: #8ca0ff;
-        width: 50px;
-        height: 50px;
-    }
 .container-main {
     background-color: #efefef;
-    width: 400px;
-    height: 500px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     color: #2e312f;
     display: flex;
     align-items: center;
     flex-direction: column;
     margin: auto;
+}
+
+#city {
+    background-color: #efefef;
+    grid-area: city;
+}
+
+#london {
+    background-color: #efefef;
+    grid-area: london;
+}
+
+#berlin {
+    background-color: #efefef;
+    grid-area: berlin;
+}
+
+#istanbul {
+    background-color: #efefef;
+    grid-area: istanbul;
+}
+
+#paris {
+    background-color: #efefef;
+    grid-area: paris;
 }
 
 .form {
