--- a/Yazilimpark/Views/Home/ToDoList.cshtml
+++ b/Yazilimpark/Views/Home/ToDoList.cshtml
@@ -23,11 +23,9 @@
     </div>
     <div class="card-footer"></div>
     <form action="javascript:void(0);">
-        <input type="text" id="todo-input" placeholder="Yeni Yapilacak..">
-        <button></button>
-        <input id="sendButton" type="submit" />
+        <input class="input" type="text" id="todo-input" placeholder="Yeni Yapilacak..">
+        <input id="sendButton" type="submit" class="btn" />
     </form>
-</div>
 </div>
 
 @section Scripts{
