--- a/Yazilimpark/wwwroot/css/todo.css
+++ b/Yazilimpark/wwwroot/css/todo.css
@@ -158,3 +158,21 @@ td {
     border: 1px solid;
     padding: 5px;
 }
+.input {
+    background-color: white;
+    border: 1px solid #232524;
+    display: inline-block;
+    border-radius: 40px;
+    padding: 0.5rem 1rem;
+    margin: 0.5rem 0;
+    font-weight: bold;
+    outline: none;
+}
+.btn {
+    background-color: #232524;
+    border-radius: 20px;
+    color: #dbeafe;
+    display: inline-block;
+    padding: 0.5rem;
+    outline: none;
+}
